--- a/style.css
+++ b/style.css
@@ -124,11 +124,39 @@ body{
  	text-transform: uppercase;
  	padding: 10px 40px 5px;
  	font-size: 18px;
- 	color: black;
 }
 
 .more_item_content {
-    color: black;
     padding: 20px 40px;
 }
 
+@media screen and (max-width: 1100px) {
+	.page {
+	    margin-top: 0px;	
+}
+	.page_gauche {
+		width: 100%;
+		display: block;
+}
+	.page_droite {
+		width: 100%;
+		display: block;
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
+		background-color: #636e72;
+		color: white;		
+}
+
+    .profile {	
+ 	    border-top-left-radius: 0px;
+}
+
+    .info {
+        border-bottom-left-radius: 0px;
+}	
+     .more_item_title {
+ 	    padding: 10px 10px 5px;
+}
+     .more_item_content {
+        padding: 20px;
+}
