--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body{
 }
 
 .page_droite {
-	background-color: #b2bec3;
+	background-color: #7f8c8d;
 	width: 70%;
 	display: inline-block;
-	color: black;
+	color: white;
 	vertical-align: top;
 	border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -70,6 +70,7 @@ body{
 .info_item_content {
     color: white;
     padding: 20px;
+
 }
 
 /* LIST */
@@ -92,8 +93,12 @@ body{
 	list-style: none;
 }
 
+.list-contact {
+	
+}
+
 .list-contact li {
-	list-style: none;
+	list-style: none;	
 }
 
 .list_title {
@@ -104,6 +109,7 @@ body{
 
 .list_content {
     padding-bottom: 2px;
+    
 }
 
 .list_content li {
@@ -128,6 +134,11 @@ body{
 
 .more_item_content {
     padding: 20px 20px;
+}
+
+.link {
+	text-decoration: none;
+	color: white;
 }
 
 @media screen and (max-width: 1100px) {
@@ -159,4 +170,5 @@ body{
 }
      .more_item_content {
         padding: 20px;
+}
 }
