--- a/style.css
+++ b/style.css
@@ -136,10 +136,10 @@ body{
     padding: 20px 20px;
 }
 
-.link {
-	text-decoration: none;
+.link-contact {
 	color: white;
 }
+
 
 @media screen and (max-width: 1100px) {
 	.page {
